--- a/src/style/navbar.css
+++ b/src/style/navbar.css
@@ -11,3 +11,13 @@ nav .logo {
     font-size: 2rem;
     font-weight: 500;
 }
+
+nav ul {
+    margin: 1rem 0;
+}
+
+nav a {
+    font-size: 1.1rem;
+    font-weight: 500;
+    color: hsl(253, 13%, 40%);
+}
