--- a/src/components/spinner/spinner.css
+++ b/src/components/spinner/spinner.css
@@ -3,3 +3,34 @@
     display: block;
     margin: auto;
 }
+
+.lds-dual-ring {
+    display: inline-block;
+    width: 80px;
+    height: 80px;
+    max-width: fit-content;
+    display: block;
+    margin: auto;
+}
+
+.lds-dual-ring:after {
+    content: "";
+    display: block;
+    width: 25px;
+    height: 25px;
+    margin: 8px;
+    border-radius: 50%;
+    border: 6px solid #7367f0;
+    border-color: #7367f0 transparent #7367f0 transparent;
+    animation: lds-dual-ring 1.2s linear infinite;
+}
+
+@keyframes lds-dual-ring {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
