--- a/src/components/@navigation/sidenav.css
+++ b/src/components/@navigation/sidenav.css
@@ -1,5 +1,5 @@
 .sidenav {
-    padding: 1.5rem;
+    padding: 1.5rem 1.5rem 2rem 1.5rem;
     position: fixed;
     width: 260px;
     height: 100%;
