--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -32,3 +32,9 @@
 .search input[type="search"]::-webkit-search-cancel-button {
     display: none;
 }
+
+@media (max-width: 650px) {
+    .search {
+        margin-top: 3.5rem;
+    }
+}
