--- a/src/components/spinner/spinner.css
+++ b/src/components/spinner/spinner.css
@@ -5,7 +5,7 @@
 }
 
 .lds-dual-ring {
-    display: inline-block;
+    display: block;
     width: 80px;
     height: 80px;
     max-width: fit-content;
@@ -18,7 +18,7 @@
     display: block;
     width: 35px;
     height: 35px;
-    margin: 8px;
+    margin: 8px auto;
     border-radius: 50%;
     border: 3px solid #7367f0;
     border-color: #7367f0 transparent #7367f0 transparent;
