--- a/src/components/spinner/spinner.css
+++ b/src/components/spinner/spinner.css
@@ -1,16 +1,13 @@
 .tail-spin svg {
-    max-width: fit-content;
     display: block;
     margin: auto;
+    width: 100%;
 }
 
 .lds-dual-ring {
-    display: block;
     width: 80px;
     height: 80px;
-    max-width: fit-content;
-    display: block;
-    margin: auto;
+    margin: 3rem auto;
 }
 
 .lds-dual-ring:after {
@@ -18,7 +15,7 @@
     display: block;
     width: 35px;
     height: 35px;
-    margin: 8px auto;
+    margin: 8px 0;
     border-radius: 50%;
     border: 3px solid #7367f0;
     border-color: #7367f0 transparent #7367f0 transparent;
