--- a/src/components/@navigation/sidenav/sidenav.css
+++ b/src/components/@navigation/sidenav/sidenav.css
@@ -1,3 +1,11 @@
+.return-nav {
+    display: block;
+}
+
+.not-return-nav {
+    display: none;
+}
+
 .sidenav {
     padding: 1.5rem 1.5rem 2rem 1.5rem;
     position: fixed;
