--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
     display: block;
 }
 
-main {
+.main {
     position: absolute;
     width: calc(100% - 260px);
     left: 260px;
@@ -36,7 +36,7 @@ li {
 }
 
 @media (max-width: 650px) {
-    main {
+    .main {
         position: absolute;
         width: 100%;
         min-height: 100vh;
