--- a/src/components/spinner/spinner.css
+++ b/src/components/spinner/spinner.css
@@ -5,17 +5,16 @@
 }
 
 .lds-dual-ring {
-    width: 80px;
-    height: 80px;
-    margin: 3rem auto;
+    width: 35px;
+    height: 35px;
+    margin: 0 auto;
 }
 
 .lds-dual-ring:after {
     content: "";
-    display: block;
+    display: inline-block;
     width: 35px;
     height: 35px;
-    margin: 8px 0;
     border-radius: 50%;
     border: 3px solid #7367f0;
     border-color: #7367f0 transparent #7367f0 transparent;
