--- a/src/pages/@users/users.css
+++ b/src/pages/@users/users.css
@@ -65,11 +65,15 @@
     height: 17px;
     width: 17px;
     object-fit: cover;
+    transform: translate(0, 4px);
 }
 
 .users table tbody tr td {
-    padding: .5rem;
+    padding: .5rem 1rem;
     font-size: .8rem;
+    text-transform: capitalize;
+    font-weight: 500;
+    max-width: 180px;
 }
 
 .users table tbody tr td .demo-dp {
@@ -91,7 +95,7 @@
     border: 2px solid #3C79F2;
     outline: 1px solid #aac3f5;
     outline-offset: 2px;
-    border-radius: 10px;
+    border-radius: 5px;
     font-size: .9rem;
     font-weight: 600;
     cursor: pointer;
