--- a/src/style/login.css
+++ b/src/style/login.css
@@ -52,10 +52,11 @@
 }
 
 .login label {
-    font-size: .9rem;
+    font-size: 1rem;
     color: hsl(253, 13%, 40%);
     display: block;
-    margin-bottom: .4rem;
+    margin-bottom: .5rem;
+    font-weight: 500;
 }
 
 .login input {
@@ -63,10 +64,14 @@
     border: .5px solid hsl(253, 13%, 40%);
     border-radius: 5px;
     padding: .7rem;
-    font-size: .9rem;
+    font-size: 1rem;
     width: 100%;
     max-width: 100%;
     background: white;
+}
+
+.mail {
+    margin-bottom: 1rem;
 }
 
 .login .input-error {
@@ -85,6 +90,7 @@
     border-radius: 5px;
     background: white;
     position: relative;
+    margin-bottom: 2rem;
 }
 
 .login .password span {
