--- a/src/pages/@hosts/host-details.css
+++ b/src/pages/@hosts/host-details.css
@@ -62,6 +62,7 @@
 
 .host-details-profile {
     display: flex;
+    flex-wrap: wrap;
     gap: 1rem;
 }
 
@@ -123,4 +124,13 @@
 .host-details .category-range .active-btn {
     background: #155EEF;
     color: white;
+}
+
+.profile-pic {
+    min-height: 140px;
+    max-height: 140px;
+    width: 140px;
+    object-fit: cover;
+    border-radius: 50%;
+    border: 3px solid rgb(184, 177, 177);
 }
