--- a/src/pages/@hosts/host.css
+++ b/src/pages/@hosts/host.css
@@ -93,7 +93,7 @@
 }
 
 .host table tbody tr td {
-    padding: .5rem 1rem;
+    padding: 0rem 1rem;
     font-size: .8rem;
     text-transform: capitalize;
     font-weight: 500;
@@ -105,6 +105,24 @@
     width: 40px;
     object-fit: cover;
     border-radius: 50%;
+}
+
+.host .verified {
+    color: #219653;
+    background: #D5E8DD;
+    text-align: center;
+    font-size: .9rem;
+    font-weight: 500;
+    border-radius: 16px;
+}
+
+.host .pending {
+    color: #F2994A;
+    background: #F5E8BD;
+    text-align: center;
+    font-size: .9rem;
+    font-weight: 500;
+    border-radius: 16px;
 }
 
 .host .pagination {
