--- a/src/pages/apartment/apartment.css
+++ b/src/pages/apartment/apartment.css
@@ -70,11 +70,35 @@
 }
 
 .apartment table tbody tr td {
-    padding: 1rem;
+    max-width: 180px;
     font-size: .8rem;
     text-transform: capitalize;
     font-weight: 500;
-    max-width: 180px;
+    padding-left: 1rem;
+}
+
+.apartment .act {
+    color: #219653;
+    background: #D5E8DD;
+    text-align: center;
+    font-weight: 500;
+    border-radius: 16px;
+    margin: .5rem 0;
+    padding: .7rem 1rem;
+    display: inline-block;
+    width: 80%;
+}
+
+.apartment .sus {
+    color: #F2994A;
+    background: #F5E8BD;
+    text-align: center;
+    font-weight: 500;
+    border-radius: 16px;
+    margin: .5rem 0;
+    padding: .7rem 1rem;
+    display: inline-block;
+    width: 80%;
 }
 
 .apartment table tbody tr .options {
