--- a/src/pages/@users/users.css
+++ b/src/pages/@users/users.css
@@ -84,7 +84,7 @@
     font-weight: 500;
     border-radius: 16px;
     margin: .5rem 0;
-    padding: .7rem 1rem;
+    padding: .7rem 1.7rem .7rem 1rem;
     display: inline-block;
     width: 80%;
 }
@@ -97,7 +97,7 @@
     font-weight: 500;
     border-radius: 16px;
     margin: .5rem 0;
-    padding: .7rem 1rem;
+    padding: .7rem 1.7rem .7rem 1rem;
     display: inline-block;
     width: 80%;
 }
