--- a/src/pages/@analytics/analytics.css
+++ b/src/pages/@analytics/analytics.css
@@ -5,6 +5,8 @@
 .analytics-heading {
     display: flex;
     justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 2rem;
     align-items: center;
 }
 
@@ -40,8 +42,9 @@
 .analytics-category {
     margin: 2rem 0;
     display: flex;
-    justify-content: space-between;
-    flex-wrap: wrap;
+    flex-direction: column;
+    /* justify-content: space-between; */
+    /* flex-wrap: wrap; */
     gap: 2rem;
 }
 
@@ -53,11 +56,13 @@
     padding: 1rem;
     min-height: 200px;
     flex-basis: 250px;
-    flex-grow: 1
+    flex-grow: 1;
 }
 
 .analytics-category-heading {
     display: flex;
+    flex-wrap: wrap;
+    gap: 2rem;
     justify-content: space-between;
     align-items: center;
 }
