--- a/src/pages/@hosts/host-details.css
+++ b/src/pages/@hosts/host-details.css
@@ -6,6 +6,8 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
+    gap: 2rem;
 }
 
 .host-details-filter {
