--- a/src/pages/@userdetails/userdetails.css
+++ b/src/pages/@userdetails/userdetails.css
@@ -18,6 +18,19 @@
     padding: 1rem;
 }
 
+.user-details .redirect {
+    color: #155EEF;
+    border: 2px solid #155EEF;
+    background-color: white;
+    border-radius: 8px;
+    padding: .5rem 1.5rem;
+    font-size: 1rem;
+    font-weight: 600;
+    display: block;
+    max-width: fit-content;
+    margin: 1rem 0;
+}
+
 .user-details-info {
     margin: 2rem 0;
     display: flex;
@@ -78,7 +91,7 @@
 
 .user-details-profile .address {
     color: rgba(45, 45, 45, 0.6);
-    font-size: .8rem;
+    font-size: 1rem;
     font-weight: 600;
     margin: .4rem 0;
 }
@@ -119,4 +132,39 @@
 .user-details .category-range .active-btn {
     background: #155EEF;
     color: white;
+}
+
+.user-details .actions {
+    max-width: fit-content;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 1rem;
+    margin: 1rem 0;
+}
+
+.user-details .action-btn {
+    padding: .6rem 1rem;
+    font-size: .9rem;
+    font-weight: 600;
+}
+
+.user-details .suspend {
+    color: #F2994A;
+    border: 2px solid #F2994A;
+    background-color: white;
+    border-radius: 8px;
+}
+
+.user-details .delete {
+    color: #FF3B30;
+    border: 2px solid #FF3B30;
+    background-color: white;
+    border-radius: 8px;
+}
+
+.user-details .veri {
+    color: #219653;
+    border: 2px solid #219653;
+    background-color: white;
+    border-radius: 8px;
 }
