--- a/src/components/search/search.css
+++ b/src/components/search/search.css
@@ -6,8 +6,8 @@
     padding: .7rem 1rem;
     border: 0.5px solid #AAAAAA;
     border-radius: 8px;
-    margin: 1.5rem auto 0 auto;
-    width: clamp(200px, 100%, 400px);
+    margin: 0 auto;
+    width: clamp(100px, 100%, 400px);
 }
 
 .search input {
@@ -33,8 +33,8 @@
     display: none;
 }
 
-@media (max-width: 650px) {
-    .search {
-        margin-top: 3.5rem;
-    }
-}
+    /* @media (max-width: 650px) {
+        .search {
+            margin-top: 3.5rem;
+        }
+    } */
