--- a/src/pages/@userdetails/userdetails.css
+++ b/src/pages/@userdetails/userdetails.css
@@ -83,20 +83,47 @@
     letter-spacing: 0.2px;
     margin-bottom: 14px;
 }
-.user-details-info>div {
+.info-address {
+    margin-bottom: 14px;
+}
+.user-details-info .current-booking-div {
+    display: flex;
+    flex-direction: column;
+}
+@media (max-width: 1024px){
+    .user-details-info .current-booking-details {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 20px;
+    }
+}
+@media (max-width: 992px){
+    .amenities-images, .saved-listings-items {
+        grid-template-columns: repeat(3, 1fr) !important;
+    }
+}
+@media (max-width: 768px){
+    .user-details-info .current-booking-details {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .amenities-images, .saved-listings-items, .saved-listings-items {
+        grid-template-columns: repeat(2, 1fr) !important;
+    }
+}
+.user-details-info>div:not(.current-and-saved) {
     background: #FFFFFF;
     box-shadow: 1px 2px 4px rgba(45, 45, 45, 0.15);
     border-radius: 8px;
     flex-grow: 1;
     flex-basis: 350px;
     padding: 1.5rem;
-    /* height: fit-content; */
     min-height: 200px;
 }
 
 .user-details-info>div h3 {
     color: #2D2D2D;
-    font-size: 1.1rem;
+    font-size: 1.125rem;
 }
 
 .user-details-filter .profile {
@@ -129,18 +156,154 @@
 }
 .recent-booking-div-head {
     display: flex;
-    justify-content: center;
 }
 .recent-booking-div-head h3 {
     color: #2D2D2D;
     font-family: 'Raleway';
-    font-size: 18px;
+    font-size: 1.125rem;
     font-style: normal;
     font-weight: 600;
     line-height: normal;
     letter-spacing: 0.2px;
 }
+.apartment-amenities {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+.apartment-amenities div h4 {
+    color: #2D2D2D;
+    font-family: 'Raleway', sans-serif;
+    font-size: 1.125rem;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 28px;
+    letter-spacing: 0.2px;
 
+}
+.apartment-amenities div p {
+    color: #2D2D2D;
+    text-align: right;
+    font-family: 'Raleway', sans-serif;
+    font-size: 0.875rem;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 28px;
+    letter-spacing: 0.169px;
+    max-width: 400px;
+    width: 95%;
+    margin-left: auto;
+}
+.amenities-images, .saved-listings-items {
+    display: grid;
+    grid-template-columns:repeat(4, 1fr);
+    gap: 10px;
+}
+.saved-listings-div h3 {
+    margin-bottom: 20px;
+}
+.saved-listings-item {
+    position: relative;
+}
+.saved-listings-item .previous-arrow-div, .next-arrow-div {
+    position: absolute;
+    display: flex;
+    top: 35%;
+    z-index: 1;
+    background-color: #D0DFFC;
+    border-radius: 50%;
+}
+.previous-arrow-div {
+    left: 4px;
+}
+.next-arrow-div {
+    right: 4px;
+}
+ .saved-listings-items img, .saved-listings-items {
+    width: 100%;
+} 
+.saved-listings-item-details {
+    background-color: #f8f8f8;
+    padding-top: 10px;
+    padding-bottom: 15px;
+    margin-bottom: 20px;
+}
+.saved-listings-item-details h5 {
+    color: rgba(6, 6, 6, 0.90);
+    font-family: 'Raleway';
+    font-size: 10.71px;
+    font-style: normal;
+    font-weight: 700;
+    letter-spacing: 0.1px;
+}
+.saved-listings-item-details div {
+    display: flex;
+    justify-content: space-between;
+}
+.saved-listings-item-details div div {
+    display: flex;
+    flex-direction: column;
+}
+.saved-listings-item-details div div span {
+    color: rgba(6, 6, 6, 0.80);
+    font-family: 'Raleway';
+    font-size: 8.571px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: 13.387px; /* 156.181% */
+    letter-spacing: 0.1px;
+}
+.saved-listings-item-details div .pricing div {
+    display: inline-flex;
+    flex-direction: row;
+    align-items: center;
+    /* display: flex; */
+}
+.saved-listings-item-details p {
+    color: rgba(6, 6, 6, 0.90);
+    font-family: 'Raleway', sans-serif;
+    font-size: 10.71px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 20.08px; /* 187.5% */
+    letter-spacing: 0.1px;
+    margin-top: -8px;
+}
+.saved-listings-item div div .pricing .price {
+    color: #060606;
+    font-family: 'Raleway', sans-serif;
+    font-size: 12.048px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: 21.419px; /* 177.778% */
+    letter-spacing: 0.1px;
+    margin-right: 3px;
+}
+.saved-listings-item div div .pricing .rate {
+    color: rgba(6, 6, 6, 0.60);
+    font-family: 'Raleway', sans-serif;
+    font-size: 8.032px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 21.419px; /* 266.667% */
+    letter-spacing: 0.1px;
+}
+.view-more-div {
+    display: flex;
+    justify-content: flex-end;
+}
+.view-more-div div {
+    color: #155EEF;
+    font-family: 'Raleway', sans-serif;
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    letter-spacing: 0.232px;
+}
+.view-more-div div svg {
+    margin-left: 3px;
+}
 @media (max-width: 400px){
     .user-details-profile {
         flex-direction: column;
@@ -149,6 +312,24 @@
     .recent-booking-div { 
         flex-direction: column;
         justify-content: flex-start;
+    }
+    .recent-booking-div-head {
+        margin-bottom: 20px;
+    }
+    .apartment-amenities {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+    }
+    .apartment-amenities div h4 {
+        line-height: normal;
+        margin-bottom: 20px;
+    }
+    .apartment-amenities div p {
+        text-align: left;
+    }
+    .amenities-images, .saved-listings-items {
+        grid-template-columns:repeat(2, 1fr);
     }
 }
 
@@ -244,7 +425,15 @@
     background-color: white;
     border-radius: 8px;
 }
-
+.current-booking-div {
+    margin-bottom: 20px;
+}
+.current-booking-div, .saved-listings-div {
+    background-color: white;
+    box-shadow: 1px 2px 4px rgba(45, 45, 45, 0.15);
+    border-radius: 8px;
+    padding: 1.5rem;
+}
 .current-booking-div .blue-background {
     display: flex;
     justify-content: center;
@@ -270,7 +459,17 @@
     justify-content: space-between;
     align-items: center;
 }
+.current-booking-details div:not(:nth-child(1)) div:nth-child(1) .svg-div {
+    /* margin: auto; */
+    margin: auto 5px auto 0;
+}
 .current-booking-details div:not(:nth-child(1)) div:nth-child(1) {
+    display: flex;
+    justify-content: flex-start;  
+    align-items: center;  
+    margin-bottom: 10px;
+}
+.current-booking-details div:not(:nth-child(1)) div:nth-child(1) h5 {
     color: rgba(45, 45, 45, 0.90);
     font-family: 'Raleway';
     font-size: 12px;
@@ -278,7 +477,6 @@
     font-weight: 600;
     line-height: normal;
     letter-spacing: 0.11px;
-    margin-bottom: 10px;
 }
 .current-booking-details div:not(:nth-child(1)) div:nth-child(2) {
     color: #2D2D2D;
@@ -291,4 +489,20 @@
 }
 .current-booking-div .horizontal-divider {
     margin-top: 10px;
+}
+.contact div {
+    display: flex;
+    justify-content: center;
+}
+.contact .circle-indicator {
+    display: inline-flex;
+    width: 19px;
+    height: 19px;
+    aspect-ratio: 1/1;
+    margin: auto 8px auto 0;
+    background-color: #D9D9D9;
+    border-radius: 50%;
+}
+.contact div:first-child{
+    margin-right: 20px;
 }
