--- a/src/pages/apartment/apartment.css
+++ b/src/pages/apartment/apartment.css
@@ -1,7 +1,13 @@
 .apartment {
-    padding: 2rem 0 2rem 2rem;
+    padding: 0;
+}
+.apartment-table {
+    padding: 20px 20px 0 20px;
 }
 
+.apartment-table.pagination-div {
+    padding: 0 20px 20px 20px;
+}
 .apartment-heading {
     display: flex;
     justify-content: space-between;
@@ -106,4 +112,8 @@
     position: relative;
     cursor: pointer;
     padding-left: 2rem !important;
+}
+
+.pagination-div {
+    
 }
